[gd_scene load_steps=3 format=3 uid="uid://brxpekusgpboe"]

[ext_resource type="Script" path="res://addons/project_file_search/search_result.gd" id="1_dvwig"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mvh3f"]

[node name="SearchResult" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 4
script = ExtResource("1_dvwig")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_mvh3f")

[node name="Path" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Placeholder"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
